--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 		<meta charset="utf-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		  <meta property="og:image" content="https://derayga.github.io/image/btp.jpg">
-		  <meta property="og:title" content="Deray 嘎嘎嘎 單車旅行">
-		  <meta property="og:description" content="2007年 北京到巴黎">
+		  <meta property="og:title" content="北京到巴黎 2007年 - Deray 嘎嘎嘎 單車旅行">
 		<title>北京到巴黎 | Deray</title>
 		<meta name="author" content="Deray" />
 		<meta name="robots" content="all" />
